# BLEP

./: .gitignore  README.md  a.out  gf.py  gf16.py  gf2.py  gf256.py  gf4.py  issues.md  matrix.py  prog_eff_ver.py  rainbow_new.py  test.c  util_test.py
C++/: a.out  efficient_verification.cpp  gf16.cpp  gf16_lookup.cpp  gf2.cpp  gf256.cpp  gf256_lookup.cpp  gf4.cpp  matrix.cpp  progressive_verification.cpp  rainbow.cpp  sbiro  standard_verification.cpp  utils.cpp  vector.cpp
Python/: effver.py  gf16.py  gf2.py  gf256.py  gf4.py  progver.py  rainbow.py  test_all_verification_schemes.py  utils.py  ver.py
c/: CMakeLists.txt  backup.c  build.py  issues.md  rainbow_complete_benchmark.sh  rainbow_complete_test.sh  rainbow_offver_complete_benchmark.sh  run_tests.sh  typescript
c++/: CMakeLists.txt  build.sh  test.cpp
c++/gf/: gf16.cpp  gf16_lookup.cpp  gf16_lookup.h  gf256.cpp  gf256_lookup.cpp  gf256_lookup.h  gf_operations.cpp
c++/include/: backup.cpp  efficient_verification.h  file_utils.h  gf16.h  gf256.h  gf_operations.h  hash_utils.h  math_utils.h  matrix.h  progressive_verification.h  rainbow.h  random_utils.h  standard_verification.h  vector.h
c++/include/blep/math/: gf16.h  gf256.h  matrix.h  vector.h
c++/include/blep/mv_verification/: eff_ver.h  prog_ver.h  std_ver.h
c++/include/blep/schemes/: rainbow.h
c++/include/blep/utils/: file.h  hash.h  rand.h
c++/schemes/: rainbow.cpp  rainbow_new.cpp  rainbow_v2.cpp
c++/scripts/: CMakeLists.txt  rainbow_benchmark.cpp  rainbow_complete_test.sh  rainbow_offver_benchmark.cpp  rainbow_offver_complete_benchmark.sh  rainbow_ver_benchmark.cpp  rainbow_ver_complete_benchmark.sh
c++/src/: CMakeLists.txt
c++/src/math/: gf16.cpp  gf16_lookup.h  gf256.cpp  gf256_lookup.h  gf_operations.cpp  gf_operations.h
c++/src/schemes/: rainbow.cpp
c++/src/utils/: file.cpp  hash.cpp  rand.cpp
c++/tests/: CMakeLists.txt  digest_samples.h  hash_test.cpp  hash_utils_test.cpp  math_utils_test.cpp  matrix_samples.h  matrix_test.cpp  rainbow_test.cpp  rainbow_test_v2.cpp  utils_test.cpp
c++/tmp/: pk1.txt  pk2.txt  pk3.txt  signature1.txt  signature2.txt  signature3.txt  sk1.txt  sk2.txt  sk3.txt
c++/utils/: file_utils.cpp  hash_utils.cpp
c/gf/: gf16.c  gf16_lookup.h  gf256.c  gf256_lookup.h  gf_operations.c
c/include/: efficient_verification.h  file_utils.h  hash_utils.h  math_utils.h  memory_utils.h  progressive_verification.h  rainbow.h  random_utils.h  standard_verification.h
c/include/blep/math/: gf16.h  gf256.h  matrix.h
c/include/blep/mv_verification/: eff_ver.h  prog_ver.h  std_ver.h
c/include/blep/schemes/: rainbow.h
c/include/blep/utils/: file.h  hash.h  memory.h  rand.h
c/schemes/: rainbow.c
c/scripts/: CMakeLists.txt  generate_rainbow_svk.c  rainbow_benchmark.c  rainbow_complete_test.sh  rainbow_offver_benchmark.c  rainbow_offver_complete_benchmark.sh  rainbow_ver_complete_benchmark.sh
c/src/: CMakeLists.txt
c/src/math/: gf16.c  gf16_lookup.h  gf256.c  gf_operations.c  matrix.c
c/src/mv_verification/: eff_ver.c  prog_ver.c  std_ver.c
c/src/schemes/: rainbow.c
c/src/utils/: file.c  hash.c  memory.c  rand.c
c/test/: int_matrix_samples.h  math_utils_test.c  rainbow_test.c  unsigned_matrix_samples.h
c/tests/: CMakeLists.txt  hash_test.c  matrix_test.c  rainbow_test.c
c/utils/: efficient_verification.c  file_utils.c  hash_utils.c  math_utils.c  memory_utils.c  progressive_verification.c  random_utils.c  standard_verification.c
python/: generate_lookup_tables.py  out.cpp  out.txt  parsing_utils.py  rainbow_test.py  uart_utils.py
python/schemes/: rainbow.py
python/ver/: effver.py  progver.py  utils.py  ver.py
rainbow_examples/: message.txt  pk1.txt  pk2.txt  pk3.txt  signature1.txt  signature2.txt  signature3.txt  sk1.txt  sk2.txt  sk3.txt
sage/: attacks.py  effver.py  gf16.py  gf2.py  gf256.py  gf4.py  out.txt  progver.py  rainbow.py  utils.py  ver.py
tiny_c/: backup.c  issues.md  test
tiny_c++/: CMakeLists.txt  prj.conf
tiny_c++/gf/: gf16.cpp  gf16_lookup.h  gf256.cpp  gf256_lookup.h  gf_operations.cpp
tiny_c++/include/: gf16.h  gf256.h  hash_utils.h  math_utils.h  matrix.h  progressive_verification.h  rainbow.h  random_utils.h  random_utils_v2.h  standard_verification.h  uart_utils.h  vector.h
tiny_c++/include/blep/math/: gf16.h  gf256.h  matrix.h  vector.h
tiny_c++/include/blep/mv_verification/: eff_ver.h  prog_ver.h  std_ver.h
tiny_c++/include/blep/schemes/: rainbow.h
tiny_c++/include/blep/utils/: rand.h  uart.h
tiny_c++/schemes/: rainbow.cpp
tiny_c++/src/: CMakeLists.txt
tiny_c++/src/math/: gf16.cpp  gf16_lookup.h  gf256.cpp  gf256_lookup.h  gf_operations.cpp  gf_operations.h
tiny_c++/src/schemes/: rainbow.cpp
tiny_c++/src/utils/: SHA  hash.cpp  uart.cpp
tiny_c++/src/utils/SHA/: sha512.c  sha512.h
tiny_c++/utils/: hash_utils.cpp  sha384.c  uart_utils.cpp
tiny_c/gf/: gf16.c  gf256.c  gf_operations.c
tiny_c/include/: gf16.h  gf256.h  gf_operations.h  hash_utils.h  math_utils.h  memory_utils.h  progressive_verification.h  rainbow.h  random_utils.h  standard_verification.h  uart_utils.h
tiny_c/schemes/: rainbow.c
tiny_c/utils/: hash_utils.c  math_utils.c  memory_utils.c  progressive_verification.c  random_utils.c  standard_verification.c  uart_utils.c
tmp/: debug.gdb  pk.txt  signature.txt  sk.txt
zephyr/flash_test/: CMakeLists.txt  prj.conf  random_test_array.py
zephyr/rainbow_benchmark/: CMakeLists.txt  interaction_script.py  prj.conf
zephyr/rainbow_benchmark/src/: main.cpp  svk.h
zephyr/rainbow_benchmark_cpp/: CMakeLists.txt  complete_benchmark.py  launch.py  prj.conf  sample.yaml
zephyr/rainbow_benchmark_cpp/src/: main.cpp  qemu_benchmark.cpp  svk.h  tiny_blep
zephyr/rainbow_svk_test/: CMakeLists.txt  interaction_script.py  prj.conf
zephyr/rainbow_svk_test/src/: main.cpp
zephyr/rainbow_test_c/: CMakeLists.txt  interaction_script.py  prj.conf
zephyr/rainbow_test_c/src/: main.c  svk.h
zephyr/rainbow_test_cpp/: CMakeLists.txt  interaction_script.py  prj.conf
zephyr/rainbow_test_cpp/src/: main.cpp  svk.h
(+52 files in other folders)
